Updates in preparation for AGU Fall 2023

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,6 +51,6 @@
   </nav>
 </header>
 
-<div class="alert alert-danger" role="alert">
-  This conference is still being organized. All details <i>will</i> change.
+<div class="alert alert-warning" role="alert">
+  This conference is still being organized. Some details may change.
 </div>
