Updated link to NoI

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,6 +51,7 @@
   </nav>
 </header>
 
-<div class="alert alert-warning" role="alert">
-  This conference is still being organized. Some details may change.
+<div class="alert alert-info" role="info">
+  Please submit a <a href="https://forms.gle/qua7ytCEXyGRP7gs6">Notice of Intent</a> if you are interested in the conference!
+  The Author Portal for abstract submission will be open in mid-February.
 </div>
