Updated submission timeline

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,5 +53,5 @@
 
 <div class="alert alert-info" role="info">
   Please submit a <a href="https://forms.gle/qua7ytCEXyGRP7gs6">Notice of Intent</a> if you are interested in the conference!
-  The Author Portal for abstract submission will be open in mid-February.
+  The Author Portal for abstract submission will be open by April 1st at the latest.
 </div>
