Make submission link public

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,7 +42,7 @@
           </li>
         </ul>
       </div>
-      <a href="#" role="button" class="btn btn-primary disabled" aria-disabled="true">Author Portal</a>
+      <a href="https://cmt3.research.microsoft.com/SUDS2024/" role="button" class="btn btn-primary" aria-disabled="true" target="_blank">Author Portal</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -52,6 +52,5 @@
 </header>
 
 <div class="alert alert-info" role="info">
-  Please submit a <a href="https://forms.gle/qua7ytCEXyGRP7gs6">Notice of Intent</a> if you are interested in the conference!
-  The Author Portal for abstract submission will be open by April 1st at the latest.
+  Abstract submissions are now open! Access the author portal at the top right. Please submit a <a href="https://forms.gle/qua7ytCEXyGRP7gs6">Notice of Intent</a> if you intend to submit or attend.
 </div>
