Removed NOI ref

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,5 +52,5 @@
 </header>
 
 <div class="alert alert-info" role="info">
-  Abstract submissions are now open! Access the author portal at the top right. Please submit a <a href="https://forms.gle/qua7ytCEXyGRP7gs6">Notice of Intent</a> if you intend to submit or attend.
+  Abstract submissions are now open! Submit via the author portal at the top right by <b>May 17th, 2024</b>.
 </div>
