--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,5 +52,5 @@
 </header>
 
 <div class="alert alert-info" role="info">
-  Abstract submissions are now open! Submit via the author portal at the top right by <b>May 17th, 2024</b>.
+  Abstract submissions are now open! Submit via the author portal at the top right by <b>May 31st, 2024</b>.
 </div>
