--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,7 +12,7 @@
         <div class="container-fluid py-3">
           <h1 class="display-5 fw-bold" style="color: white;">{{page.jumbo_title}}</h1>
           <p class="col-md-8 fs-4" style="color: white">{{page.jumbo_sub}}</p>
-          <a class="btn btn-info" href="call.html" role="button">Call for Abstracts</a>
+          <a class="btn btn-info" href="call.html" role="button">Abstracts due 5/31</a>
         </div>
       </div>
       {{content}}
@@ -20,5 +20,17 @@
     {% include footer.html %}
   </main>
 </body>
+
+<style>
+p {
+  font-size: 1.15rem;
+}
+
+.keynote {
+  width: 7em;
+  padding: 1em;
+}
+
+</style>
 
 </html>
