Second Round Announcement

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,5 +52,11 @@
 </header>
 
 <div class="alert alert-info" role="info">
-  Abstract submissions are now open! Submit via the author portal at the top right by <b>May 31st, 2024</b>.
+  The second round of abstract submissions is now open until <strong>June 28th, 2024</strong>: <a href="/call.html">More Information</a>
 </div>
+
+<style>
+.mb-4 {
+  margin-bottom: 0rem !important;
+}
+</style>
