--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,7 +52,7 @@
 </header>
 
 <div class="alert alert-info" role="info">
-  The second round of abstract submissions is now open until <strong>June 28th, 2024</strong>: <a href="/call.html">More Information</a>
+  Author Registration will open on <strong>July 22nd, 2024</strong>: <a href="/attend/register.html">More Information</a>
 </div>
 
 <style>
