Keynotes, Marcel, Deadline

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,7 +52,7 @@
 </header>
 
 <div class="alert alert-info" role="info">
-  Author Registration will open on <strong>July 22nd, 2024</strong>: <a href="/attend/register.html">More Information</a>
+  Authors are guaranteed registration until <strong>August 5th, 2024</strong>: <a href="/attend/register.html">More Information</a>
 </div>
 
 <style>
