--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -27,14 +27,19 @@ p {
 }
 
 .keynote {
-  width: 7em;
-  padding: 1em;
+  width: 9em;
+  padding: 0.5em;
 }
 
 .font-fancy {
   font-family: 'Garamond', serif;
   padding: 1em;
 }
+
+td {
+  vertical-align: top;
+}
+
 </style>
 
 </html>
