--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,7 +52,9 @@
 </header>
 
 <div class="alert alert-info" role="info">
-  Authors are guaranteed registration until <strong>August 5th, 2024</strong>: <a href="/attend/register.html">More Information</a>
+  The complete conference program is available under the "Program" tab.
+  <br>
+  Participant registration is now open until <strong>August 16th, 2024</strong> <a href="https://forms.gle/PFL7u6sbxHMogVMz9">here</a>!
 </div>
 
 <style>
