Update jumbo button

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -12,7 +12,7 @@
         <div class="container-fluid py-3">
           <h1 class="display-5 fw-bold" style="color: white;">{{page.jumbo_title}}</h1>
           <p class="col-md-8 fs-4" style="color: white">{{page.jumbo_sub}}</p>
-          <a class="btn btn-info" href="call.html" role="button">2nd Round 6/28</a>
+          <a class="btn btn-info" href="https://forms.gle/PFL7u6sbxHMogVMz9" role="button">Public Registration</a>
         </div>
       </div>
       {{content}}
