--- a/_includes/header.html
+++ b/_includes/header.html
@@ -54,7 +54,7 @@
 <div class="alert alert-info" role="info">
   The complete conference program is available under the "Program" tab.
   <br>
-  Participant registration is now open until <strong>August 16th, 2024</strong> <a href="https://forms.gle/PFL7u6sbxHMogVMz9">here</a>!
+  Participant registration has been extended until <strong>August 20th, 2024, 10:00 PT</strong> <a href="https://forms.gle/PFL7u6sbxHMogVMz9">here</a>!
 </div>
 
 <style>
