--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,9 +52,7 @@
 </header>
 
 <div class="alert alert-info" role="info">
-  The complete conference program is available under the "Program" tab.
-  <br>
-  Participant registration has been extended until <strong>August 20th, 2024, 5PM PT</strong> <a href="https://forms.gle/PFL7u6sbxHMogVMz9">here</a>!
+  See you at SUDS 2024!
 </div>
 
 <style>
